# wrench

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/: wrb.py  wrench-build.py
src/wrench_build/: __init__.py  lib.py  wr.py  wrb.py
test/: Wrenchfile
test/build_exe/: another.c  another.h  even_more.h  other.c  other.h  test_parse_include.c  yet_another.c  yet_another.h
