[project]
name = "wrench"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "xiaoshihou514", email = "onelessononeexercise@gmail.com" }
]
dependencies = [
    "parsy>=2.1",
    "parsy-stubs>=2.1.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/wrench"]
