[project]
name = "wrench_build"
version = "0.1.8"
description = "Build C files without checking all its dependencies"
authors = [
    { name = "xiaoshihou514", email = "onelessononeexercise@gmail.com" }
]
dependencies = [
    "parsy>=2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/wrench_build"]
dev-dependencies = [ "parsy-stubs>=2.1.2" ]

[project.scripts]
wrb = "wrench_build:wrb"
wr = "wrench_build:wr"
